# hrtech-etl

./: CONTRIBUTING.md  CONTRIBUTION.md  README.md  cli.py  main.py  pyproject.toml
app/: api.py  main.py  playground.py
app/templates/: playground.html
src/hrtech_etl/: __init__.py
src/hrtech_etl/connectors/: __init__.py
src/hrtech_etl/connectors/hrflow/: __init__.py  actions.py  models.py  test.py
src/hrtech_etl/connectors/warehouse_a/: __init__.py  actions.py  models.py  requests.py  test.py
src/hrtech_etl/core/: __init__.py  actions.py  auth.py  connector.py  example.json  expressions.py  models.py  pipeline.py  registry.py  requests.py  types.py  ui_schema.py  utils.py
src/hrtech_etl/formatters/: a_to_b.py  base.py  unified.py
