[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hrtech-etl"
version = "0.1.0"
description = "ETL framework for HRTech data (jobs & profiles) across ATS, CRM, Jobboard, and HCM systems."
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hrtech-etl = "hrtech_etl.cli:app"

