[tool.poetry]
name = "hrtech-etl"
version = "0.1.0"
description = "ETL framework for HRTech data (jobs & profiles) across ATS, CRM, Jobboard, and HCM systems."
authors = ["Mouhidine SEIV <mouhidine.seiv@hrflow.ai>", "Thomas ZHU <thomas.zhu@hrflow.ai>", "Mohamed Nouayti <mohamed.nouayti@hrflow.ai>", "Gaspard  Saliou <gaspard.saliou@hrflow.ai>"]
readme = "README.md"
packages = [{ include = "hrtech_etl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.0.0"
typer = "^0.12.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",  # space before : (Black-compatible)
  "W503",  # line break before binary operator (Black-compatible)
]
